<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidProgrammerTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="animation_button">Animation Test</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_animation">Animation</string>
    <string name="coding_tasks">Coding Tasks</string>
    <string name="login_button">login button</string>
    <string name="chat_button">chat button</string>
    <string name="animation_test_button">animation test button</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="animate_bonus">bonus points for creativity.</string>
    <string name="animate_prompt" formatted="false">Animate the App Partner icon. Make it fade to 0% alpha and then to 100% alpha when the fade button is pressed. Allow it to be dragged around the screen by touching and dragging.</string>
    <string name="fade_button">fade button</string>
    <string name="apppartner_icon">apppartner icon</string>
    <string name="title_activity_connect_three">Connect Three</string>
    <string name="new_game">New Game?</string>
    <string name="winner_app">AppPartner is the winner!</string>
    <string name="winner_squirrel">Omg Squirrel is the winner!</string>
    <string name="draw">Draw</string>
    <string name="gride_place_holder">gride place holder</string>
    <string name="user_avatar">user avatar</string>
    <string name="blank_username">Username cannot be blank</string>
    <string name="blank_password">Password cannot be blank</string>

</resources>
